--- a/style/style.css
+++ b/style/style.css
@@ -4,4 +4,10 @@
 .poppins {
     font-family: "Poppins", sans-serif;
   }
-  
+  /* .completed-btn:disabled {
+    background: #3752FD;
+    color: #FFFFFF;
+    cursor: default !important;
+   
+  }
+   */
